-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.14.0
-
3
-
9223372036854775807
This issue was created by maloo for liuying <emoly.liu@intel.com>
Failure Rate: 3.08% of most recent 65 runs, 35 skipped (all branches), especially in group review-dne-ssk testing
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/3f7f577a-0b7d-11ea-9487-52540065bddc
test_240 failed with the following error:
Starting client: onyx-30vm1.onyx.whamcloud.com: -o user_xattr,flock onyx-30vm4@tcp:/lustre /mnt/lustre CMD: onyx-30vm1.onyx.whamcloud.com mkdir -p /mnt/lustre CMD: onyx-30vm1.onyx.whamcloud.com mount -t lustre -o user_xattr,flock onyx-30vm4@tcp:/lustre /mnt/lustre mount.lustre: mount onyx-30vm4@tcp:/lustre at /mnt/lustre failed: Operation not permitted sanity test_240: @@@@@@ FAIL: failed to mount client
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_240 - failed to mount client